# tokscope

./: .gitignore  README.md  pyproject.toml
scripts/: demo.py
tests/: test_claude_adapter.py  test_cli.py  test_cline_adapter.py  test_codex_adapter.py  test_filters.py  test_pricing.py  test_render.py  test_stats.py
tests/fixtures/claude/: session1.jsonl
tests/fixtures/cline/1776785890046/: task_metadata.json  ui_messages.json
tests/fixtures/codex/2026/06/01/: rollout-test.jsonl
tokology/: cli.py  filters.py  pricing.py  pricing_defaults.json  render.py  stats.py
tokology/adapters/: base.py  cline.py  codex.py
tokology/templates/: wrapped.html.tmpl
tokscope/: cli.py  detect.py  pricing.py  render.py  stats.py
tokscope/adapters/: claude_code.py  cline.py
tokscope/templates/: wrapped.html.j2  wrapped.html.tmpl
