[project]
name = "tokscope"
version = "0.1.0"
description = "Local Spotify-Wrapped-style recap of your AI coding token usage"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1"]

[project.scripts]
tokscope = "tokscope.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokscope"]
