[project]
name = "tokology"
version = "0.1.0"
description = "Local, multi-tool AI coding token-usage recap — reads your CLI logs and renders a shareable card. Zero daemon, nothing uploaded."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Haokai Ding" }]
keywords = ["claude-code", "codex", "cline", "tokens", "usage", "wrapped", "cli"]
dependencies = []   # zero runtime deps — stdlib only
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/HaokaiDing/tokology"
Repository = "https://github.com/HaokaiDing/tokology"
Issues = "https://github.com/HaokaiDing/tokology/issues"

[project.scripts]
tokology = "tokology.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokology"]

[tool.hatch.build.targets.sdist]
include = ["tokology", "tests", "scripts", "README.md", "LICENSE"]
